--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ colorama==0.4.6
 flasgger==0.9.7.1
 Flask==3.1.1
 flask-cors==6.0.1
+Flask-JWT-Extended==4.7.1
 Flask-SQLAlchemy==3.1.1
 greenlet==3.2.3
 iniconfig==2.1.0
@@ -17,6 +18,7 @@ mistune==3.1.3
 packaging==25.0
 pluggy==1.6.0
 Pygments==2.19.2
+PyJWT==2.10.1
 pytest==8.4.1
 PyYAML==6.0.2
 referencing==0.36.2
